# cinny-desktop

./: .gitignore  .gitmodules  CLAUDE.md  README.md  config.json  package.json
.github/workflows/: archive.yml  build-android.yml  build-windows.yml  build.yml  tauri.yml
scripts/: bump-version.mjs  release.mjs  rename-prinny.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json  migrated.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  taskbar.rs  ytdlp_commands.rs  ytdlp_manager.rs  ytdlp_updater.rs
